@@ -50,6 +50,7 @@
   *  - Fixed CDC and RNDIS host demos and class drivers - bidirectional endpoints should use two seperate pipes, not one half-duplex pipe
   *  - Fixed Pipe_IsEndpointBound() not taking the endpoint's direction into account
   *  - Fixed EEPROM and FLASH ISP programming in the AVRISP project
+  *  - Fixed incorrect values of USB_CONFIG_ATTR_SELFPOWERED and USB_CONFIG_ATTR_REMOTEWAKEUP tokens (thanks to Claus Christensen)
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
